# Escape-the-Clocktower

./: ._Application  ._README.md  ._ThirdParty  CMakeLists.txt  Escape The Clocktower Development Bible.docx  Player.h  README.md  Test.md  input1.txt  main.c
Application/: ._EtC_Beta
Application/EtC_Beta/: ._EtC_1.xcodeproj  ._EtC_Beta  ._EtC_Beta.xcodeproj  ._SDL2.framework
Application/EtC_Beta/EtC_1.xcodeproj/: ._project.xcworkspace  ._xcshareddata  project.pbxproj
Application/EtC_Beta/EtC_Beta/: ._Assets.xcassets  ._BIG_LEVEL.txt  ._Beta_L1.txt  ._Beta_L2.txt  ._ETC_BETA_L1  ._ETC_BETA_L2  ._ETC_L1  ._ETC_L2  ._Info.plist  ._MAP.txt  ._Player.h  ._Test.txt  ._init.txt  ._main.c  .nfs.20051085.03be  BIG_LEVEL.txt  Beta_L1.txt  Beta_L2.txt  Info.plist  MAP.txt  Player.h  Test.txt  init.txt  main.c  map-beta.txt
Application/EtC_Beta/EtC_Beta.xcodeproj/: ._project.pbxproj  ._project.xcworkspace  ._xcshareddata  ._xcuserdata  project.pbxproj
Application/EtC_Beta/SDL2.framework/: ._Versions
allegro/: CHANGES-5.0.txt  CHANGES-5.1.txt  CHANGES-5.2.txt  allegro.mft
allegro/5.2.4.0/: INSTALL_RECEIPT.json
allegro/5.2.4.0/.brew/: allegro.rb
allegro/5.2.4.0/lib/: liballegro.5.2.4.dylib  liballegro.5.2.dylib  liballegro.dylib  liballegro_acodec.5.2.4.dylib  liballegro_acodec.5.2.dylib  liballegro_acodec.dylib  liballegro_audio.5.2.4.dylib  liballegro_audio.5.2.dylib  liballegro_audio.dylib  liballegro_color.5.2.4.dylib  liballegro_color.5.2.dylib  liballegro_color.dylib  liballegro_dialog.5.2.4.dylib  liballegro_dialog.5.2.dylib  liballegro_dialog.dylib  liballegro_font.5.2.4.dylib  (+23 more)
allegro/5.2.5.0/: INSTALL_RECEIPT.json
allegro/src/: file_slice.c
cmake/: FindSDL2.cmake
src/: main.c
(+1202 files in other folders)
